--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -120,7 +120,7 @@
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-    opacity: 0.7;
+    // opacity: 0.7;
     /* Re-enable clicks only on the buttons themselves */
     pointer-events: auto;
 }
